--- a/IntroPython1.ipynb
+++ b/IntroPython1.ipynb
@@ -1578,7 +1578,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('intropython')",
    "language": "python",
    "name": "python3"
   },
@@ -1596,7 +1596,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "0800c0f83fa147eddd4b87d7df88a61f04b699d9837e9e8222e971ef1ed63fb6"
+    "hash": "19a09be4d2c9931a0331d04356acf3298727b4992ad248af519f02d3fd1fe524"
    }
   }
  },
