week 5 homework and catch up

--- a/pfn_5.ipynb
+++ b/pfn_5.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {
     "id": "0aQecS75HX0p"
    },
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1018,7 +1018,7 @@
        "[[1, 2], [3, 4], [5, 6]]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1051,7 +1051,18 @@
     "id": "NCbnADCCaqTC",
     "outputId": "1cf52769-6205-4c95-d033-9aaed7d3cae3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 4], [6, 8], [10, 12]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lst_2 = [\n",
     "    [2*it2 for it2 in it] for it in lst_1\n",
@@ -1070,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1087,7 +1098,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1125,7 +1136,7 @@
        "       [10, 12]])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,18 +1268,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {
     "id": "sHUU-KMef2ek"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2135079249.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [12]\u001b[0;36m\u001b[0m\n\u001b[0;31m    np.save('mat_1.npy', mat_1)?\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "np.save('mat_1.npy', mat_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {
     "id": "ih06GwajgD1J"
    },
@@ -1279,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1296,7 +1316,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "metadata": {
     "id": "OmWwSJnhhxt2"
    },
@@ -1517,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1561,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1569,14 +1589,25 @@
     "id": "dC4lJH2ncJJD",
     "outputId": "aaff9a47-843f-40d8-aa7e-e8b2651a453a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mat_1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "lYd4fORPkZNd"
    },
@@ -1590,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1599,7 +1630,19 @@
     "id": "3vC8NBhGkc0W",
     "outputId": "9dac0cb5-60ef-47ed-e2a4-c663e23698b1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,2) (2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/zelieanner/Desktop/IntroPythonGitRepo/IntroPython/pfn_5.ipynb Cell 91\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/zelieanner/Desktop/IntroPythonGitRepo/IntroPython/pfn_5.ipynb#Y156sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m mat_1\u001b[39m+\u001b[39;49mmat_3\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (2,3) "
+     ]
+    }
+   ],
    "source": [
     "mat_1+mat_3"
    ]
@@ -1617,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1625,7 +1668,20 @@
     "id": "fVg714JHcTAN",
     "outputId": "ee9a8a11-5bc8-4476-9c50-94fbefa11ee9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4],\n",
+       "       [4, 6],\n",
+       "       [6, 8]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array([\n",
     "    [1,2]\n",
@@ -1647,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "MAqugLYAxvX8"
    },
@@ -1658,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1666,14 +1722,25 @@
     "id": "1wwZoRZbxww4",
     "outputId": "73a1f9ad-33e1-4399-f00c-af5048109b2c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 1)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisor.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1681,14 +1748,27 @@
     "id": "K_YXKJNolJId",
     "outputId": "505b949f-0a2f-4437-8140-901bd9d565f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mat_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1696,14 +1776,27 @@
     "id": "szv2oFgMcaJv",
     "outputId": "1b6837b3-fcb6-40d0-c456-2cfae20b071a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5, 1. ],\n",
+       "       [3. , 4. ],\n",
+       "       [5. , 6. ]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mat_1 / divisor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "de902JjElM4W"
    },
@@ -1714,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1722,14 +1815,25 @@
     "id": "WOfbxyFRlQpe",
     "outputId": "e8d907f2-c730-474f-f82e-6fdaf44d56b6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vec_4.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1737,7 +1841,20 @@
     "id": "Aw0ed-0alRiq",
     "outputId": "bb6cf9a1-7bbb-4930-82bd-5e6051345aba"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4],\n",
+       "       [4, 6],\n",
+       "       [6, 8]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vec_4+mat_1"
    ]
@@ -1753,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1769,7 +1886,7 @@
        "       0.55, 0.6 , 0.65, 0.7 , 0.75, 0.8 , 0.85, 0.9 , 0.95, 1.  ])"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1795,7 +1912,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1821,7 +1938,7 @@
        "array([1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1832,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1857,7 +1974,7 @@
        "        [1., 1., 1.]]])"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1879,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "8vtf-cISnZyy"
    },
@@ -1891,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "eX7dR8TJndJ9"
    },
@@ -1903,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "n5gRH_tvnnai"
    },
@@ -1915,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "id": "3Hgh_ZD-nuvk"
    },
@@ -1927,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "jBNPjK5gnyBF"
    },
@@ -3106,7 +3223,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('intropython')",
    "language": "python",
    "name": "python3"
   },
@@ -3121,6 +3238,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "19a09be4d2c9931a0331d04356acf3298727b4992ad248af519f02d3fd1fe524"
+   }
   }
  },
  "nbformat": 4,
